Update Contact Icon

--- a/index.html
+++ b/index.html
@@ -366,10 +366,11 @@ input:checked + .slider:before {
 
 <footer class="w3-container themeColorBackground w3-center w3-margin-top">
 	<p>Connect me with:<br>
-  		<i class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/lay-yan-tan-7623ba162/"></i>
-  		<i class="fa fa-envelope w3-margin-left w3-hover-opacity" href="https://www.linkedin.com/in/lay-yan-tan-7623ba162/"></i></p>
-  
-  	<p> &copy 2019 Copyright: https://github.com/leannetan97 </p>
+  		<a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/lay-yan-tan-7623ba162/" style="text-decoration: none;"></a>
+  		<a class="fa fa-envelope w3-margin-left w3-hover-opacity" href="mailto:leannetan97@hotmail.com" style="text-decoration: none;"></a>
+  	</p>
+ 
+  	<p> &copy 2019 Copyright:<a style="text-decoration: none;" href="https://github.com/leannetan97"> https://github.com/leannetan97 </a></p>
 
 </footer>
 
