--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ input:checked + .slider:before {
  	
  	<p>or</p>
  	<p>
- 	<form action="http://127.0.0.1:5000/send/" method="POST" target="invisible" id="messageForm" style="width: 60%; margin: auto;">
+ 	<form action="http://127.0.0.1:5000/send/" method="POST" target="invisible" id="messageForm" name = "g-recaptcha-response" style="width: 60%; margin: auto;">
  		
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Name" required="" name="Name"></p>
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Email" required="" name="Email"></p>
@@ -390,6 +390,7 @@ input:checked + .slider:before {
 
 </body>
 
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 </html>
 
