--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@ input:checked + .slider:before {
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Email" required="" name="Email"></p>
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Subject" required="" name="Subject"></p>
  		<p><textarea class="w3-input w3-border rounded" rows="4" cols="50" placeholder="Message" required="" name="Message"></textarea></p>
- 		<p><button class="w3-center w3-button w3-white w3-text-brown rounded g-recaptcha" data-sitekey="yourKey" data-callback="onSubmit" type="submit" form="messageForm" id="send"><i class="fa fa-paper-plane w3-margin-right"></i><b>SEND MESSAGE</b></button></p>
- 		<div class="g-recaptcha" data-sitekey="6LfPc7YUAAAAAL25smqqzJ_EnQFqGsX5hNvGZP_q" name = "g-recaptcha-response"></div>
+ 		<p><button class="w3-center w3-button w3-white w3-text-brown rounded g-recaptcha" data-sitekey="6LfPc7YUAAAAAL25smqqzJ_EnQFqGsX5hNvGZP_q" data-callback="onSubmit" type="submit" id="send"><i class="fa fa-paper-plane w3-margin-right"></i><b>SEND MESSAGE</b></button></p>
+ 		<!-- <div class="g-recaptcha" data-sitekey="6LfPc7YUAAAAAL25smqqzJ_EnQFqGsX5hNvGZP_q" name = "g-recaptcha-response"></div> -->
  	</form>
 
     </script>
@@ -391,7 +391,7 @@ input:checked + .slider:before {
 </body>
 <script type="text/javascript">
   var onSubmit = function(response) {
-    document.getElementById("messageForm").submit(); // send response to your backend service
+    document.getElementById("messageForm").submit(); // send response to your backe
   };
 </script>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
