--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ input:checked + .slider:before {
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Email" required="" name="Email"></p>
  		<p><input class="w3-input w3-border rounded" type="text" placeholder="Subject" required="" name="Subject"></p>
  		<p><textarea class="w3-input w3-border rounded" rows="4" cols="50" placeholder="Message" required="" name="Message"></textarea></p>
- 		<p><button class="w3-center w3-button w3-white w3-text-brown rounded" onclick = "onClickSendBtn" ><i class="fa fa-paper-plane w3-margin-right"></i><b>SEND MESSAGE</b></button></p>
+ 		<p></p>
  		<!-- <div class="g-recaptcha" data-sitekey="6LfPc7YUAAAAAL25smqqzJ_EnQFqGsX5hNvGZP_q" name = "g-recaptcha-response"></div> -->
  		<div class="g-recaptcha"
        data-sitekey="6LfPc7YUAAAAAL25smqqzJ_EnQFqGsX5hNvGZP_q"
@@ -401,7 +401,7 @@ input:checked + .slider:before {
 </script>
 
  	</form>
-
+<button class="w3-center w3-button w3-white w3-text-brown rounded" onclick = "onClickSendBtn" ><i class="fa fa-paper-plane w3-margin-right"></i><b>SEND MESSAGE</b></button>
  </p>
   	<p> &copy 2019 Copyright:<a style="text-decoration: none;" href="https://github.com/leannetan97"> https://github.com/leannetan97 </a></p>
 
